HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiSafeEnumApplyGenericUnbounded/Expected.uv
//! Expected diagnostic metadata for the FfiSafeEnumApplyGenericUnbounded rejected-source specimen.

expectedDiagnostic("E-TYP-2629", "rule.23.FfiSafe-Enum-Apply-Generic-Unbounded-Err")
